# llm-hackathon-MS-and-Chem-2025

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
chemcrow_tool/: app.py
evaluation/: calculate_pdf_words.py  evaluate_mcq_llm.py  evaluate_mcq_llm_with_references.py  evaluate_mcq_os_llm_with_references.py  llm_evaluate.py  memorization_evaluation.py  semantic_and_reading_scoring.py
evaluation/dataset/evaluation_dataset/: Spatial Atomic Layer Deposition for Energy and Electronic Devices.xlsx  Subnano Al.xlsx  Topographically selective.xlsx  catalysts_design.csv  catalysts_design.xlsx  molecular_design.csv  molecular_design.xlsx  spatial_atomic_layer_deposition.csv  subnano_al2o3.csv  topographically_selective.csv
evaluation/generated_papers/results/llm_evaluations/: spatial_atomic_layer_deposition.json
evaluation/memory_evaluation/: gpt-4o-mini_papers_metadata.json  gpt-5_papers_metadata.json  o3_papers_metadata.json  o4-mini_papers_metadata.json
evaluation/results/: evaluation_results.csv
evaluation/results/llm_evaluation/base/: o3.json  o4-mini.json
evaluation/results/mcq_evaluation_llm/base/: gpt-5.json  llama_2_13B_chat_hf.json  llama_3_1_8B_instruct.json  o3.json  o4-mini.json  qwen_2_5_7B_instruct.json
evaluation/results/mcq_evaluation_llm/gpt5_generated/: gpt-5.json  llama_3_1_8B_instruct.json  o3.json  o4-mini.json  qwen_2_5_7B_instruct.json
evaluation/utils/: convert_excel_to_csv.py
mc_nest_hypo_gen/: app.py  main.py
mc_nest_hypo_gen/config/: enums.py  llm.json
mc_nest_hypo_gen/src/: gpt_utils.py  mc_nest.py
(+16 files in other folders)
