[project]
name = "mc-nest-hypo-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.3",
    "openai>=1.107.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
